[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://graphics/images/ships/tanks.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 54, 32 )

[node name="Enemy" type="Area2D"]
script = ExtResource( 1 )

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Tween" type="Tween" parent="."]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Cannon" type="Node2D" parent="."]
position = Vector2( 0, -40 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
